# trackpad_helper

./: README.md  main.py  pyproject.toml
hs/: gesture_receiver.lua
src/: gesture_recognizer
src/actions/: hs_socket.py
src/gestures/: swipe_up.py
src/runtime/: engine.py
src/trackpad_helper/: __main__.py
src/trackpad_helper/gestures/: swipe_up.py
src/trackpad_helper/runtime/: engine.py
src/trackpad_helper/vision/: camera.py  hands_task.py
src/vision/: hands_task.py
